--- a/icecream-web/package.json
+++ b/icecream-web/package.json
@@ -20,6 +20,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "bcryptjs": "^2.4.3",
     "next": "15.1.6",
+    "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
