--- a/icecream-web/package.json
+++ b/icecream-web/package.json
@@ -19,6 +19,7 @@
     "@hookform/error-message": "^2.0.1",
     "@neondatabase/serverless": "^0.10.4",
     "bcryptjs": "^2.4.3",
+    "jose": "^5.9.6",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
