--- a/icecream-web/package.json
+++ b/icecream-web/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/error-message": "^2.0.1",
     "@neondatabase/serverless": "^0.10.4",
+    "@vis.gl/react-google-maps": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "jose": "^5.9.6",
     "next": "15.1.6",
