--- a/icecream-web/.gitignore
+++ b/icecream-web/.gitignore
@@ -45,3 +45,7 @@ next-env.d.ts
 
 /cypress/e2e/1-getting-started/
 /cypress/e2e/2-advanced-examples/
+
+# db seeding data
+/app/lib/placeholder-data.js
+/app/seed/
