--- a/icecream-web/package.json
+++ b/icecream-web/package.json
@@ -12,12 +12,14 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^4.1.1",
+    "@jackfranklin/test-data-bot": "^2.1.0",
     "@neondatabase/serverless": "^0.10.4",
     "@vis.gl/react-google-maps": "^1.5.1",
     "bcryptjs": "^2.4.3",
